--- a/index.html
+++ b/index.html
@@ -7,6 +7,20 @@
     <title>Show-Hide-Strength Password</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css">
     <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Be+Vietnam+Pro:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Nunito+Sans:ital,opsz,wght@0,6..12,200..1000;1,6..12,200..1000&family=Signika:wght@300..700&display=swap" rel="stylesheet">
+
+    <style>
+        body{
+            font-family: "Montserrat", sans-serif;
+            font-optical-sizing: auto;
+            font-weight: 500;
+            font-style: normal;
+        }
+    </style>
+
 </head>
 
 <body class="bg-gray-900 text-white">
@@ -20,7 +34,7 @@
                     Show-Hide-Strength Password</h1>
                 </div>
                 <div class="flex flex-col space-y-5">
-                    <label class="flex flex-row justify-between items-center bg-[#071428] rounded-lg mb-2 pr-2 pl-2 py-3 w-95">
+                    <label class="flex flex-row justify-between items-center bg-[#071428] rounded-lg mb-2 pr-3.5 pl-2 py-3 w-95">
                         <input type="password" id="password" class="text-[17px] focus:outline-none w-full px-3.5" placeholder="Password"></input>
                         <i id="changIcon" class="fa-regular fa-eye-slash hover:cursor-pointer"></i>
                     </label>
