--- a/index.html
+++ b/index.html
@@ -23,19 +23,19 @@
 
 </head>
 
-<body class="bg-gray-900 text-white">
+<body class="bg-[#7c9885] text-white">
     
     <section class="font-sans">
         <div class="flex flex-row justify-evenly h-screen items-center">
             
-            <div class="bg-[#1E2939] rounded-xl px-8 py-6 space-y-5">
+            <div class="bg-gray-200 rounded-xl px-10 py-10 space-y-4">
                 <div>
-                    <h1 class="text-[21px] text-[#b7bdc5]">
-                    Show-Hide-Strength Password</h1>
+                    <h1 class="text-[21px] font-bold text-gray-500">
+                    SHOW-HIDE-STRENGTH PASSWORD</h1>
                 </div>
                 <div class="flex flex-col space-y-5">
-                    <label class="flex flex-row justify-between items-center bg-[#071428] rounded-lg mb-2 pr-3.5 pl-2 py-3 w-95">
-                        <input type="password" id="password" class="text-[17px] focus:outline-none w-full px-3.5" placeholder="Password"></input>
+                    <label class="flex flex-row justify-between items-center text-[#63796a] border-2 border-[#7c9885] rounded-lg mb-2 pr-3.5 pl-2 py-3 w-100">
+                        <input type="password" id="password" class="text-[16px] focus:outline-none w-full px-3" placeholder="Password"></input>
                         <i id="changIcon" class="fa-regular fa-eye-slash hover:cursor-pointer"></i>
                     </label>
                     <p class="text-[15px] px-3" id="txt"></p>
